--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@prisma/client": "^6.17.1",
     "@react-icons/all-files": "^4.1.0",
     "antd": "^5.27.4",
+    "bcrypt": "^6.0.0",
+    "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
@@ -22,6 +28,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
