--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -10,34 +8,46 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+# build / output
+/.next
+/out
 /build
+/.turbo
+
+# database
+*.db
+*.sqlite
+/prisma/dev.db
+/prisma/test.db
+
+# coverage & testing
+/coverage
 
 # misc
 .DS_Store
 *.pem
-
-# debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-.env.local
-# vercel
+# environment files
+.env
+.env.*
+!.env.example
+
+# vercel / deployment
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
+# generated prisma files
 /src/generated/prisma
+/prisma/migrations
+
+# uploads / large assets (если есть)
+public/uploads
+public/tmp
