--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@prisma/client": "^6.17.1",
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "antd": "^5.27.4",
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.24",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
