--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.5.3",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "prisma": "^6.17.1",
     "react": "19.1.0",
