--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-js-loader": "^0.1.3",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "runes2": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
