--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "antd": "^5.27.4",
+    "antd-img-crop": "^4.27.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.5.9",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.17.5",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
