--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": ""
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
